--- a/src/containers/progress/progress.css
+++ b/src/containers/progress/progress.css
@@ -1,5 +1,5 @@
 .progress-container {
-  padding: 5%;
+  padding: 5% 5% 70px 5%;
 }
 
 .progress-summary {
